syntax = "proto3";

package darkfactory.core.v1;

import "google/protobuf/timestamp.proto";

message Product {
  // Deterministic ID: "prd_" + sha256_hex(canonical_product_locator).
  string id = 1;

  // Canonical format: @local://{abs_path}
  string locator = 2;

  optional string display_name = 3;
  string default_variant_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
